2012-07-26  Pino Toscano  <toscano.pino@tiscali.it>

	* inet/check_native.c: New file.

2012-07-26  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13629]
	* math/s_clog.c (__clog): Use __log1p or direct log1p calculation
	if larger part has absolute value 1.0.
	* math/s_clog10.c (__clog10): Likewise.
	* math/s_clog10f.c (__clog10f): Likewise.
	* math/s_clog10l.c (__clog10l): Likewise.
	* math/s_clogf.c (__clogf): Likewise.
	* math/s_clogl.c (__clogl): Likewise.
	* math/libm-test.inc (clog_test): Add more tests.
	(clog10_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	* elf/tst-auditmod1.c (pltenter): Remove all definitions of macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	Update #error for removed macros to refer only to definitions in
	tst-audit.h.
	* elf/tst-auditmod3b.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	* elf/tst-auditmod4b.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	* elf/tst-auditmod5b.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	* elf/tst-auditmod6b.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	* elf/tst-auditmod6c.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	* elf/tst-auditmod7b.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	* sysdeps/generic/tst-audit.h: Update comment to refer only to
	macro definitions in tst-audit.h.
	* sysdeps/i386/tst-audit.h: New file.