@@ -579,7 +579,7 @@ pdeclaration (const char *name, declaration * dec, int tab,
 	  break;
 	}
     }
-  f_print (fout, separator);
+  f_print (fout, "%s", separator);
 }
 
 static int
